force-app/main/default/objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The bank account which will be reconciled. Only source records associated with this bank account will be associated with this bank reconciliation.</inlineHelpText>
    <label>Bank Account</label>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Bank Reconciliations</relationshipLabel>
    <relationshipName>Bank_Reconciliations1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>