force-app/main/default/objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Beginning_Balance__c</fullName>
    <inlineHelpText>The beginning balance of the bank reconciliation. This is usually retrieved from the bank statement.</inlineHelpText>
    <label>Beginning Balance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>