force-app/main/default/objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Cleared_Deposits__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Cleared_Deposits__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The aggregate amount of cleared deposits associated with this bank reconciliation. This includes all cleared cash receipts, bank deposits, and journal lines with a debit balance.</inlineHelpText>
    <label>Cleared Deposits</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>