force-app/main/default/objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Cleared_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Cleared_Disbursements__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The aggregate amount of cleared disbursements for the bank reconciliation. This includes all cleared cash disbursements and journal entry lines with a credit balance.</inlineHelpText>
    <label>Cleared Disbursements</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>