force-app/main/default/objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__End_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__End_Date__c</fullName>
    <inlineHelpText>The end date for the bank reconciliation.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>