force-app/main/default/objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Start_Date__c</fullName>
    <inlineHelpText>The start date for the bank reconciliation.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>