force-app/main/default/objects/AcctSeed__Bank_Reconciliation2__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Bank_Account__c</columns>
    <columns>AcctSeed__Start_Date__c</columns>
    <columns>AcctSeed__End_Date__c</columns>
    <columns>AcctSeed__Uncleared_Amount__c</columns>
    <columns>AcctSeed__Ending_Balance__c</columns>
    <columns>AcctSeed__GL_Account_Variable_4__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>