force-app/main/default/objects/AcctSeed__Bank_Reconciliation2__c/listViews/Uncleared_balances.listView-meta.xml
<ListView>
    <fullName>Uncleared_balances</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Uncleared_Amount__c</columns>
    <columns>AcctSeed__GL_Account_Variable_4__c</columns>
    <columns>AcctSeed__End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Uncleared_Amount__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>Uncleared balances</label>
    <sharedTo>
        <role>Accounting</role>
    </sharedTo>
</ListView>